--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,50 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h2 {
+  font-size: 5rem;
+  color: white;
+}
+
+.product-container {
+  width: 100vw;
+  height: 100vh;
+  background: #007dc6;
+}
+
+.logo-container {
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-details {
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-details h1 {
+  font-size: 6rem;
+  color: white;
+}
+
+.product-details h2 {
+  font-size: 5rem;
+  color: #ffc220;
+}
+
+.product-details h3 {
+  color: white;
+  font-size: 2rem;
+}
+
+.product-details p {
+  color: lightgray;
+  /* font-size: 2rem; */
 }
